# emulator-practice

./: .gitignore  CMakeLists.txt  README.md  test_rom.gba
src/: gba.cpp  gba.hpp
src/bus/: bus.cpp  bus.hpp
src/cart/: rom.cpp  rom.hpp
src/cpu/: cpu.cpp  cpu.hpp
src/frontend/: sdl_main.cpp
src/ppu/: ppu.hpp
src/tools/: romgen.cpp
